# serializer version: 1
# name: test_a_missing_table_is_one_create
  tuple(
    Change(
      after=Table(
        cluster_auto=False,
        cluster_by=tuple(
        ),
        columns=tuple(
          Field(
            comment=None,
            default=None,
            generated=None,
            identity=None,
            mask=None,
            name='id',
            nullable=False,
            removed_tags=tuple(
            ),
            renamed_from=None,
            tags=tuple(
            ),
            type=Primitive(
              name='bigint',
            ),
            using=None,
          ),
        ),
        comment=None,
        constraints=tuple(
        ),
        grants=tuple(
        ),
        hooks=None,
        name='main.sales.orders',
        owner=None,
        properties=tuple(
        ),
        removed_properties=tuple(
        ),
        removed_tags=tuple(
        ),
        renamed_from=None,
        row_filter=None,
        tags=tuple(
        ),
      ),
      before=None,
      kind='create_table',
      path='',
      table='main.sales.orders',
    ),
  )
# ---
# name: test_constraints
  tuple(
    Change(
      after=Field(
        comment=None,
        default=None,
        generated=None,
        identity=None,
        mask=None,
        name='sku',
        nullable=False,
        removed_tags=tuple(
        ),
        renamed_from=None,
        tags=tuple(
        ),
        type=Primitive(
          name='string',
        ),
        using=None,
      ),
      before=None,
      kind='add_column',
      path='sku',
      table='main.sales.orders',
    ),
    Change(
      after=None,
      before=PrimaryKey(
        columns=tuple(
          'id',
        ),
        name='orders_pk',
      ),
      kind='drop_constraint',
      path='',
      table='main.sales.orders',
    ),
    Change(
      after=PrimaryKey(
        columns=tuple(
          'id',
          'sku',
        ),
        name='orders_pk',
      ),
      before=None,
      kind='add_constraint',
      path='',
      table='main.sales.orders',
    ),
    Change(
      after=Check(
        expression='sku IS NOT NULL',
        name='has_sku',
      ),
      before=None,
      kind='add_constraint',
      path='',
      table='main.sales.orders',
    ),
  )
# ---
# name: test_nested_struct_paths
  tuple(
    Change(
      after=False,
      before=True,
      kind='set_nullable',
      path='address.street',
      table='main.sales.orders',
    ),
    Change(
      after=Field(
        comment='Postal code',
        default=None,
        generated=None,
        identity=None,
        mask=None,
        name='zip',
        nullable=True,
        removed_tags=tuple(
        ),
        renamed_from=None,
        tags=tuple(
        ),
        type=Primitive(
          name='string',
        ),
        using=None,
      ),
      before=None,
      kind='add_column',
      path='address.zip',
      table='main.sales.orders',
    ),
    Change(
      after=Field(
        comment=None,
        default=None,
        generated=None,
        identity=None,
        mask=None,
        name='country',
        nullable=True,
        removed_tags=tuple(
        ),
        renamed_from=None,
        tags=tuple(
        ),
        type=Primitive(
          name='string',
        ),
        using=None,
      ),
      before=None,
      kind='add_column',
      path='address.country',
      table='main.sales.orders',
    ),
    Change(
      after=None,
      before=Field(
        comment=None,
        default=None,
        generated=None,
        identity=None,
        mask=None,
        name='old_zip',
        nullable=True,
        removed_tags=tuple(
        ),
        renamed_from=None,
        tags=tuple(
        ),
        type=Primitive(
          name='string',
        ),
        using=None,
      ),
      kind='drop_column',
      path='address.old_zip',
      table='main.sales.orders',
    ),
    Change(
      after=None,
      before=Field(
        comment=None,
        default=None,
        generated=None,
        identity=None,
        mask=None,
        name='gone',
        nullable=True,
        removed_tags=tuple(
        ),
        renamed_from=None,
        tags=tuple(
        ),
        type=Primitive(
          name='int',
        ),
        using=None,
      ),
      kind='drop_column',
      path='address.gone',
      table='main.sales.orders',
    ),
  )
# ---
# name: test_table_metadata
  tuple(
    Change(
      after='Order facts, one row per order',
      before='Order facts',
      kind='set_table_comment',
      path='',
      table='main.sales.orders',
    ),
    Change(
      after=tuple(
        'order_date',
      ),
      before=tuple(
      ),
      kind='set_cluster_by',
      path='',
      table='main.sales.orders',
    ),
    Change(
      after='true',
      before=None,
      kind='set_property',
      path='delta.enableChangeDataFeed',
      table='main.sales.orders',
    ),
    Change(
      after='sales',
      before=None,
      kind='set_tag',
      path='domain',
      table='main.sales.orders',
    ),
  )
# ---
